RESOLVED FIXED272386
[WPE] WPE Platform: Fix invisible cursor on wayland platform
https://bugs.webkit.org/show_bug.cgi?id=272386
Summary [WPE] WPE Platform: Fix invisible cursor on wayland platform
Pawel Lampe
Reported 2024-04-09 03:00:43 PDT
When cursor theme fails to load, updating cursor leads to it being invisible.
Attachments
EWS
Comment 1 2024-04-19 01:04:46 PDT
Committed 277726@main (474b00fa093a): <https://commits.webkit.org/277726@main> Reviewed commits have been landed. Closing PR #27024 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.