[WPE] WPE Platform: Fix invisible cursor on wayland platform https://bugs.webkit.org/show_bug.cgi?id=272386

Reviewed by Adrian Perez de Castro and Carlos Garcia Campos.

* Source/WebKit/WPEPlatform/wpe/WPECursorTheme.cpp:
(WPE::cursorsPath):
(WPE::CursorTheme::create):
* Source/WebKit/WPEPlatform/wpe/wayland/WPEWaylandCursor.cpp:
(WPE::WaylandCursor::WaylandCursor):
(WPE::WaylandCursor::setFromName):
(WPE::WaylandCursor::setFromBuffer):
(WPE::WaylandCursor::update const):
* Source/WebKit/WPEPlatform/wpe/wayland/WPEWaylandCursor.h:

Canonical link: https://commits.webkit.org/277726@main